--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ body {
   max-width: 1100px;   
   margin: 40px auto;  
   padding: 0 15px;   
+  text-align: justify;
 }
 
 /* ===============================
@@ -199,9 +200,10 @@ body {
 /*IMAGES*/
 
 img {
-    width: 100%; /* or any custom size */
+    width: 70%; /* or any custom size */
     height: 100%; 
     object-fit: contain;
+    margin: 1em;
 }
 
 
@@ -214,3 +216,4 @@ img {
     padding: 40px;
     text-align: center;
 }
+
